Shamelessly copy a config for networking wiki.

--- a/conky.conf
+++ b/conky.conf
@@ -4,6 +4,16 @@ conky.config = {
 	alignment = 'top_left',
 	background = false,
 	border_width = 1,
+	color0 = '#999999',
+	color1 = '#cccccc',
+	color2 = '#ff0000',
+	color3 = '#00ff00',
+	color4 = '#0000ff',
+	color5 = '#ffcc00',
+	color6 = '#ccff00',
+	color7 = '#0099cc',
+	color8 = '#cc9900',
+	color9 = '#333333',
 	cpu_avg_samples = 2,
 	default_color = 'black',
 	default_outline_color = 'black',
@@ -30,6 +40,44 @@ conky.config = {
 }
 
 conky.text = [[
+${color grey}Networking: \
+$hr
+${if_up enp0s25}\
+ ${color #009999}enp0s25\
+ ${color #00cc88}${font Conky Icons by Carelli:size=14}h${font}${addrs enp0s25}
+ ${color3}total:${totaldown enp0s25} \
+ ${goto 180}${color3}${downspeed enp0s25}\
+ ${goto 245}↓${color2}↑ ${upspeed enp0s25}\
+ ${goto 350}${color2}total:${totalup enp0s25}
+${color3}${downspeedgraph enp0s25 32,250 00ffff 00ff00} \
+${color3}${downspeedgraph enp0s25 32,250 00ffff 00ff00}
+${endif}\
+${if_up wlp2s0}\
+${color #009999}${font Conky Icons by Carelli:size=14}E${font}\
+ ${color #009999}wlp2s0\
+ ${color #00cc88}${font Conky Icons by Carelli:size=14}h${font}${addr wlp2s0}\
+ ${color #6699ff}${alignr}AP MAC addr: ${color #9966ff}${wireless_ap wlp2s0}
+${color0} channel: ${color7}${wireless_channel wlp2s0}  \
+${color0}freq: ${color7}${wireless_freq wlp2s0}  \
+${color0}mode: ${color7}${wireless_mode wlp2s0}  \
+${color0}essid: ${color8}${wireless_essid wlp2s0}
+ ${color3}total:${totaldown wlp2s0} \
+ ${goto 180}${color3}${downspeed wlp2s0}\
+ ${goto 245}↓${color2}↑ ${upspeed wlp2s0}\
+ ${goto 350}${color2}total:${totalup wlp2s0}
+${color3}${downspeedgraph wlp2s0 32,250 00ffff 00ff00} \
+${color3}${downspeedgraph wlp2s0 32,250 00ffff 00ff00}
+${endif}\
+${if_up enp0s20u1}\
+ ${color #009999}enp0s20u1\
+ ${color #00cc88}${font Conky Icons by Carelli:size=14}h${font}${addrs enp0s20u1}
+ ${color3}total:${totaldown enp0s20u1} \
+ ${goto 180}${color3}${downspeed enp0s20u1}\
+ ${goto 245}↓${color2}↑ ${upspeed enp0s20u1}\
+ ${goto 350}${color2}total:${totalup enp0s20u1}
+${color3}${downspeedgraph enp0s20u1 32,250 00ffff 00ff00} \
+${color3}${downspeedgraph enp0s20u1 32,250 00ffff 00ff00}
+${endif}\
 ]]
 
 -- vim:ft=lua
